splunk/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: splunk
  name: splunk
  namespace: splunk
spec:
  ports:
  - name: 8000-tcp
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: splunk
    deploymentconfig: splunk
  sessionAffinity: None
  type: ClusterIP
