splunk/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: splunk
  namespace: splunk
spec:
  host: splunk.apps.vmopen.bynet.dev
  port:
    targetPort: 8000
  subdomain: ""
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: splunk 
    weight: 100
  wildcardPolicy: None
